--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ members = [
     "localnet",
 ]
 
+resolver = "2"
+
 [profile.release]
 overflow-checks = true
 lto = "fat"
@@ -23,7 +25,7 @@ anchor-spl = {version = "0.29.0", default-features = false, features = ["mint", 
 anyhow = "1"
 async-trait = "0.1.74"
 base64 = "0.21"
-bytemuck = "1.13"
+bytemuck = { version = "1.13", features = ["derive", "min_const_generics"]}
 chrono = "0.4.26"
 clap = { version = "3", features = [ "derive", "env" ] }
 csv = "1.2.2"
@@ -38,26 +40,29 @@ once_cell = "1"
 prometheus = "0.13"
 regex = "1"
 rust_decimal = { version = "1", features = ["maths", "c-repr"] }
-solana-program = "=1.17"
-switchboard-solana = "0.29.99"
-switchboard-v2 = "0.4.0"
-solana-randomness-service = { version = "1.0.2", features = ["cpi"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+solana-program = "1.17"
+solana-randomness-service = { version = "1.0.2", features = ["cpi"] }
 solana-client = "1.17"
 solana-sdk = "1.17"
 solana-transaction-status = "1.17"
+# solana-address-lookup-table-program = "=1.17.32"
 spl-associated-token-account = "2"
 spl-token = { version = "4", features = ["no-entrypoint"] }
 sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "decimal", "chrono"] }
+switchboard-solana = "0.29.107"
+switchboard-on-demand = "0.1.6"
+switchboard-v2 = "0.4.0"
 toml_edit = "=0.21.0"
 thiserror = "1.0.40"
 tokio = { version = "1", features = ["macros"] }
 
 
-
 program_monitor_db = { path = "peripherals/monitoring/program_monitor_db" }
 lollys-lotto = { path = "programs/lollys-lotto", features = ["no-entrypoint"] }
 lollys-lotto-rust-sdk = { path = "./lollys-lotto-rust-sdk" }
+# solana-devtools-localnet = { git = "https://github.com/0xabstracted/solana-devtools" }
+# solana-devtools-tx = { git = "https://github.com/0xabstracted/solana-devtools" }
 solana-devtools-localnet = { git = "https://github.com/ebrightfield/solana-devtools" }
 solana-devtools-tx = { git = "https://github.com/ebrightfield/solana-devtools" }
