--- a/localnet/Cargo.toml
+++ b/localnet/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = { workspace = true }
 anchor-lang = { workspace = true }
 bytemuck = { workspace = true }
 solana-devtools-localnet = { workspace = true }
-solana-devtools-tx = { git = "https://github.com/ebrightfield/solana-devtools" }
+solana-devtools-tx = { workspace = true }
 solana-sdk = { workspace = true }
 spl-token = { workspace = true }
 spl-associated-token-account = { workspace = true }
