--- a/app/package.json
+++ b/app/package.json
@@ -27,13 +27,15 @@
     "dependencies": {
       "@metaplex-foundation/beet": "^0.4.0",
       "@metaplex-foundation/beet-solana": "^0.3.1",
-      "@solana/spl-token": "^0.3.5",
-      "@solana/web3.js": "^1.66.2"
+      "@solana/web3.js": "^1.93.0",      
+      "@coral-xyz/anchor": "0.29.0",
+      "@solana/spl-token": "^0.4.6",
+      "@switchboard-xyz/on-demand": "1.1.5"
     },
     "devDependencies": {
       "@metaplex-foundation/solita": "^0.19.0",
       "rimraf": "^3.0.2",
-      "typescript": "^4.8.4"
+      "typescript": "^5.0.0"
     }
   }
   
