--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "dependencies": {
         "@coral-xyz/anchor": "^0.29.0",
         "@solana/spl-token": "^0.4.1",
+        "@switchboard-xyz/on-demand": "1.1.5",
         "@switchboard-xyz/solana-randomness-service": "1.0.0",
-        "@switchboard-xyz/solana.js": "3.2.5"   
+        "@switchboard-xyz/solana.js": "3.2.5",
+        "lollys-lotto-ts-sdk": "file:../lollys-lotto-ts-sdk"
     },
     "devDependencies": {
         "@switchboard-xyz/eslint-config": "^0.1.9",
